--- a/src/index.scss
+++ b/src/index.scss
@@ -10,47 +10,55 @@ body {
 header {
   background-color: white;
   display: flex;
+  flex-direction: column;
   column-gap: 32px;
   justify-content: center;
   align-items: center;
-  padding: 20px 80px;
+  // padding: 20px 80px;
 
-  img {
-    max-width: 180px;
-  }
-
-  h1 {
-    font-size: 80px;
-    font-weight: 400;
-    color: map-get(variables.$colors, primary);
-  }
-}
-
-nav {
-  background-color: map-get(variables.$colors, primary);
-  padding: 10px;
-  box-shadow: 0 4px 12px map-get(variables.$colors, primary);
-
-  ul {
-    list-style: none;
-    padding: 0;
+  .headerLogo {
     display: flex;
-    justify-content: center;
-    gap: 20px;
+    
+    img {
+      max-width: 180px;
+      object-fit: contain;
+    }
+  
+    h1 {
+      font-size: 80px;
+      font-weight: 400;
+      color: map-get(variables.$colors, primary);
+    }
   }
 
-  a {
-    text-decoration: none;
-    color: map-get(variables.$colors, bg);
-    font-weight: 100;
-
-    &.active {
-      border-bottom: 2px solid map-get(variables.$colors, bg);
+  nav {
+    width: 100%;
+    background-color: map-get(variables.$colors, primary);
+    padding: 10px;
+    box-shadow: 0 4px 12px map-get(variables.$colors, primary);
+  
+    ul {
+      list-style: none;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+    }
+  
+    a {
+      text-decoration: none;
+      color: map-get(variables.$colors, bg);
+      font-weight: 100;
+  
+      &.active {
+        border-bottom: 2px solid map-get(variables.$colors, bg);
+      }
     }
   }
 }
 
-nav + div {
+
+header + div {
   min-height: 80vh;
 }
 
