--- a/src/pages/List/List.module.scss
+++ b/src/pages/List/List.module.scss
@@ -31,6 +31,8 @@
 .searchContainer {
   width: 100%;
   display: flex;
+  flex-direction: column;
+  row-gap: 24px;
   justify-content: center;
   align-items: center;
 }
